# NEKTAR-Plugin

./: CMakeLists.txt  README.md  TestReader.cxx  pvNektarReader.xml  vtkNektarReader.cxx  vtkNektarReader.h
Example/: coronary.nektar
Hlib/: Makefile
Hlib/src/: Basis.C  Boundary.C  Coords.C  Element_List.C  Fieldfiles.C  Geofac.C  Gradient.C  HOSurf.C  InnerProd.C  Interp.C  Matrix.C  Matrix_Stokes.C  Memory.C  Misc.C  Norms.C  Nums.C  Particle.C  Quad.C  Refine.C  Tet.C  Transforms.C  Utilities.C
NektarObj/: nektarObject.C  nektarObject.h
Utilities/: CMakeLists.txt
Utilities/SRC_PV_NEK/: .comm_PV_NEKTAR.C.swp  Pcompare_fields.C  Pnek2vel.C  Pnek2vel_2.C  Pnek2vel_multifield.C  Pnek2vel_tec_multifield_V2.C  Pnek2vel_vtk_multifield.C  Pnek2vel_vtk_multifield_V2.C  Pnek2vort.C  Pnek2vort_POD.C  Pnek2vort_tec_multifield_V2.C  Pshear.C  abc.C  comm_PV_NEKTAR.C  io.C  nek2vel_PV_interface.C  nekPOD.C  pressure.C  shear.C  surface.C  surfvel.C  surjac.C  testCURV.C  test_partition_connectivity.C
Veclib/: Makefile
include/: Quad.h  hotel.h  nekstruct.h
include/H2BgP/: nekstruct.h
